--- a/static/css/template.css
+++ b/static/css/template.css
@@ -1,4 +1,79 @@
+header {
+  font-family: 'Libre Caslon Text', serif;
+}
+#Big_Title {
+  border:1px solid white;
+  border-radius: 10px;
+  background-color: white;
+  color: black;
+}
+.container {
+  height: 400px;
+  margin:0px;
+  padding: 0px;
+  display:grid;
+  grid-gap:0px;
+  position: relative;
+  background-image: url('/static/img/skyline.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .logo {
-  background-color: black;
-  color:white;
+  text-align: center;
+  height:100px;
+  margin:0px;
+  margin-top:20px;
+  display:inline;
+  color:#118a69;
+}
+
+.menu_box {
+  height: 30px;
+}
+
+nav {
+  
+}
+
+.menu a {
+  color:black;
+  text-decoration: none;
+  margin-right: 20px;
+}
+
+body {
+  font-family: 'Libre Caslon Text', serif;
+}
+
+.first_title {
+  text-align: center;
+}
+.circles_container {
+  margin: auto;
+  text-align: center;
+}
+.circles {
+  width:1000px;
+  display:grid;
+  margin-right: auto;
+  margin-left: auto;
+  grid-template-columns: 33% 33% 33%;
+
+}
+
+.circle_text {
+  width:250px;
+  height:250px;
+  line-height: 250px;
+  text-align: center;
+  border:1px solid black;
+  border-radius: 50%;
+  font-size: 50px;
+
+}
+
+a {
+  text-decoration: none;
+  color:darkgray;
 }
