--- a/templates/template.html
+++ b/templates/template.html
@@ -4,17 +4,22 @@
    <meta charset="utf-8">
    <title>Flask Parent Template</title>
    <link rel="stylesheet" href="{{ url_for('static', filename='css/template.css') }}">
+   <link href="https://fonts.googleapis.com/css?family=Libre+Caslon+Text&display=swap" rel="stylesheet">
  </head>
  <body>
     <header>
       <div class="container">
-        <h1 class="logo">First Web App</h1>
-        <strong><nav>
-          <ul class="menu">
-            <li><a href="{{ url_for('home') }}">Home</a></li>
-            <li><a href="{{ url_for('about') }}">About</a></li>
-          </ul>
-        </nav></strong>
+        <h1 class="logo"><a id="Big_Title" href="{{ url_for('home') }}">First Web App</a></h1>
+
+        </div>
+        <div class="menu_box">
+          <nav class="menu">
+            <a href="{{ url_for('home') }}">Home</a>
+            <a href="{{ url_for('about') }}">About</a>
+            <a href="{{ url_for('chinese') }}">Chinese</a>
+            <a href="{{ url_for('korean') }}">Korean</a>
+            <a href="{{ url_for('arabic') }}">Arabic</a>
+          </nav>
       </div>
     </header>
 
